crates/lex/tests/ui/missing_span_attribute_tuple_struct.stderr
error: missing field annotated with #[span]
 --> tests/ui/missing_span_attribute_tuple_struct.rs
  |
  | struct Foo(Span, usize);
  |           ^^^^^^^^^^^^^
